feat: meter-dialog to daisyui and fix revoke
